--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </li>
 
                     <li class="webChallenge">
-                        <a href="#">my achievements</a>
+                        <a href="#">My Achievements</a>
                         <div class="dropdown-content">
                             <a id="#" href="Multi-step-form/Multi-step-form.html" target="_blank">Multi-step form</a><br>
                             <a id="#" href="HomePage/HomePage.html" target="_blank">Home page</a><br>
@@ -110,12 +110,11 @@
                 </div>
                  <div class="col-md-6" >
                        <p class="brevepresentation">
-                        Hallo, <br>After a dual training in computer science and linguistics, 
-                        I taught computer science for five years in high school. Wanting to combine 
-                        my two fields of training, I conducted a doctoral research in computational linguistics,
-                         more precisely in machine translation based on deep learning. Today, I am able to develop
-                          computer programs for automatic text processing, to develop chatbots and to participate in 
-                          web and AI development projects.
+                        Hallo, <br>I'm a front-end web developer and chatbot integration specialist. 
+                           With expertise in creating seamless user experiences and a passion for building conversational AI,
+                           I bring websites and chatbots to life. I thrive on HTML, CSS, JavaScript and chatbot platforms such as Dialogflow, 
+                           Chatfuel and ManyChat. From responsive web design to AI-powered chatbots, 
+                           I offer custom solutions tailored to your needs. 
                        </p>
                         <ul class="menuSecond">
                             <li>
@@ -132,7 +131,7 @@
             </div>
         </div>
         <div class="FrontEndWebChallenge">
-            <div class="FrontEndWebChallengeTitel" id="multiforms"><p>Frontend web challenges</p></div>
+            <div class="FrontEndWebChallengeTitel" id="multiforms"><p>My Achievements</p></div>
                     <div class="slideConterner reveal">
                                 <div class="slide">
                                     <div class="number">
@@ -148,7 +147,6 @@
 
                                     <div class="textSlide">
                                         <a href="Multi-step-form/Multi-step-form.html" target="_blank">
-                                            
                                             The challenge is to build out a multi-step form. The users is able to:
                                             Complete each step of the sequence
                                             Go back to a previous step to update their selections
