--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <div class="imageSlide">
                                         <h2>MULTI-STEP FORM</h2>
                                         <a href="Multi-step-form/Multi-step-form.html" target="_blank">
-                                            <img class="imgMultistep" src="MultistepForm.JPG" alt="Multi stp form prototype" style="width:100%"/>
+                                            <img class="imgMultistep" src="Screenshot 2023-09-03 at 19-27-13 Multi-step form.png" alt="Multi stp form prototype" style="width:100%"/>
                                         </a>
                                     </div>
 
@@ -167,7 +167,7 @@
                                     <div class="imageSlide">
                                         <h2>NEWS HOMEPAGE</h2>
                                         <a href="HomePage/HomePage.html" target="_blank">
-                                            <img class = "spaceHome" src="spaceHome.JPG" alt="home page" style="width:100%; height:350px"/>  
+                                            <img class = "spaceHome" src="Screenshot 2023-09-03 at 19-27-38 Home page challenge.png" alt="home page" style="width:100%; height:350px"/>  
                                         </a>
                                     </div>
 
@@ -191,7 +191,7 @@
                                     <div class="imageSlide">
                                         <h2>SPACE TOURISM MULTI-PAGE WEBSITE</h2>
                                         <a href="Space tourism multi-page website/space_tourism.html" target="_blank"> 
-                                            <img class = "spaceweb" src="spaceweb.JPG" alt="Multi step form" style="width:100%"/>
+                                            <img class = "spaceweb" src="Screenshot 2023-09-03 at 19-27-55 Document.png" alt="Multi step form" style="width:100%"/>
                                         </a>
                                     </div>
                                     
@@ -217,7 +217,8 @@
                                     <div class="imageSlide">
                                         <h2>Countries rest API</h2>
                                         <a href="countriesDescription/countries.html" target="_blank"> 
-                                            <img class = "whereInTheWorld" src="whereInTheWorld.JPG" alt="Where in the world" style="width:100%"/>
+                                            <img class = "whereInTheWorld" src="Screenshot 2023-09-03 at 19-30-44 Rest countries API using html css and Javascript.png
+" alt="Where in the world" style="width:100%"/>
                                         </a>
                                     </div>
                                     
