--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
 
     <div class="menuSlideDropDown">
          <div >
-            <a>
+            <a  href="Multi-step-form/Multi-step-form.html" target="_blank">
                 <img class="BtnFormMultiStep" src="MultistepForm.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="HomePage/HomePage.html" target="_blank">
                 <img class="BtnFormMultiStep" src="spaceHome.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="Space tourism multi-page website/space_tourism.html" target="_blank">
                 <img class="BtnFormMultiStep" src="spaceweb.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="countriesDescription/countries.html" target="_blank">
                 <img class="BtnFormMultiStep" src="whereInTheWorld.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
@@ -134,9 +134,9 @@
                     </div>
                     
                     <Div class="socialMedia">
-                        <button class="btnLinkedin" href="https://linkedin.com/in/stevefeze"><i class="fa-brands fa-linkedin-in"></i><i> </i> Linkedin</button>
-                        <button class="btnLinkedin" href="https://github.com/Rute23"><i id="git_contact" class="fa-brands fa-github "></i><i> </i> Github</button>
-                        <button class="btnLinkedin" href="mailto:adress@server.com"><i class="fa-regular fa-envelope"></i><i> </i> Email</button>
+                        <div href="https://linkedin.com/in/stevefeze" target="_blank"><button class="btnLinkedin" ><i class="fa-brands fa-linkedin-in"></i><i> </i> Linkedin</button></div>
+                        <div href="https://github.com/Rute23" target="_blank"><button class="btnLinkedin" ><i id="git_contact" class="fa-brands fa-github "></i><i> </i> Github</button></div>
+                        <div href="mailto:adress@server.com" target="_blank"><button class="btnLinkedin" ><i class="fa-regular fa-envelope"></i><i> </i> Email</button><div>
                     </Div>
             </div>
         </div>
