--- a/index.html
+++ b/index.html
@@ -134,9 +134,15 @@
                     </div>
                     
                     <Div class="socialMedia">
-                        <button href="https://linkedin.com/in/stevefeze" target="_blank" class="btnLinkedin" ><i class="fa-brands fa-linkedin-in"></i><i> </i> Linkedin</button>
-                        <button href="https://github.com/Rute23" target="_blank" class="btnLinkedin" ><i id="git_contact" class="fa-brands fa-github "></i><i> </i> Github</button>
-                        <button href="mailto:adress@server.com" target="_blank" class="btnLinkedin" ><i class="fa-regular fa-envelope"></i><i> </i> Email</button>
+                        <a href="https://linkedin.com/in/stevefeze" target="_blank" >
+                            <button class="btnLinkedin" ><i class="fa-brands fa-linkedin-in"></i><i> </i> Linkedin</button>
+                        </a>
+                        <a href="https://github.com/Rute23" target="_blank" >
+                            <button class="btnLinkedin" ><i id="git_contact" class="fa-brands fa-github "></i><i> </i> Github</button>
+                        </a>
+                        <a href="mailto:adress@server.com" target="_blank">
+                            <button  class="btnLinkedin" ><i class="fa-regular fa-envelope"></i><i> </i> Email</button>
+                        </a>
                     </Div>
             </div>
         </div>
