--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                         <h3 ><a class="name" href="index.html">Steve Edgar Feze Feugang</a> </h3>
-                        <p><a class="profession" href="index.html"> Web developper</a></p>       
+                        <p><a class="profession" href="index.html">Frontend Web developper</a></p>       
                 </div>
 
                 <button type="button" class="navbar-toggle collapsed"
