--- a/index.html
+++ b/index.html
@@ -134,14 +134,16 @@
                     </div>
                     
                     <Div class="socialMedia">
-                        <a href="https://linkedin.com/in/stevefeze" target="_blank" >
+                        <a class="btnLink" href="https://linkedin.com/in/stevefeze" target="_blank">
                             <button class="btnLinkedin" ><i class="fa-brands fa-linkedin-in"></i><i> </i> Linkedin</button>
                         </a>
-                        <a href="https://github.com/Rute23" target="_blank" >
+
+                        <a class="btnLink" href="https://github.com/Rute23" target="_blank">
                             <button class="btnLinkedin" ><i id="git_contact" class="fa-brands fa-github "></i><i> </i> Github</button>
                         </a>
-                        <a href="mailto:adress@server.com" target="_blank">
-                            <button  class="btnLinkedin" ><i class="fa-regular fa-envelope"></i><i> </i> Email</button>
+                        
+                        <a class="btnLink" href="https://github.com/Rute23" target="_blank">
+                            <button class="btnLinkedin" x><i class="fa-regular fa-envelope"></i><i> </i> Email</button> 
                         </a>
                     </Div>
             </div>
