--- a/index.html
+++ b/index.html
@@ -125,12 +125,14 @@
             <div id="brevepresentation">
                 
                     <div>
-                        Hallo, <br> After a dual training in computer science and linguistics, 
-                    I taught computer science for five years in high school. Wanting to combine 
-                    my two fields of training, I conducted a doctoral research in computational linguistics,
-                    more precisely in machine translation based on deep learning. Today, I am able to develop
-                    computer programs for automatic text processing, to develop chatbots and to participate in 
-                    web and AI development projects.
+                        Hallo, <br> During 4 years of teaching computer science in high school, 
+                        I discovered a great passion for frontend web development. Today,
+                        I am looking for a job as a frontend web developer 
+                        that will allow me to work while enjoying my passion.
+                        I have good analytical skills, 
+                        I am flexible and I like to work in a team. 
+                        I have skills in HTML, CSS, Bootstrap, Figma,
+                        Responsive design, JavaScript and ReactJS
                     </div>
                     
                     <Div class="socialMedia">
