--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                     <div class="imageSlide">
                                         <h2>NEWS HOMEPAGE</h2>
                                         <a href="HomePage/HomePage.html" target="_blank">
-                                            <img class = "spaceHome" src="Screenshot 2023-09-03 at 19-27-38 Home page chall" alt="home page" style="width:100%; height:350px"/>  
+                                            <img class = "spaceHome" src="Screenshot 2023-09-03 at 19-27-38 Home page challenge.png" alt="home page" style="width:100%; height:350px"/>  
                                         </a>
                                     </div>
 
@@ -245,7 +245,8 @@
                                     <div class="imageSlide">
                                         <h2>Countries rest API</h2>
                                         <a href="countriesDescription/countries.html" target="_blank"> 
-                                            <img class = "whereInTheWorld" src="Screenshot 2023-09-03 at 19-30-44 Rest countries API " alt="Where in the world" style="width:100%"/>
+                                            <img class = "whereInTheWorld" src="Screenshot 2023-09-03 at 19-30-44 Rest countries API using html css and Javascript.png
+" alt="Where in the world" style="width:100%"/>
                                         </a>
                                     </div>
                                     
