--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                         <h3 ><a class="name" href="index.html">Steve Edgar Feze Feugang</a> </h3>
-                        <p><a class="profession" href="index.html"> Frontend Web Sevelopper</a></p>       
+                        <p><a class="profession" href="index.html"> Frontend Web Developper</a></p>       
                 </div>
 
                 <button type="button" class="navbar-toggle collapsed"
