--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         --df-messenger-send-icon: #878fac;
         --df-messenger-user-message: #479b3d;
         position: fixed;
-        bottom: 20px; 
+        bottom: 20px;
+           z-index: 5px; 
         }
 
 
