--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         --df-messenger-user-message: #479b3d;
         position: fixed;
         bottom: 20px;
-           z-index: 5px; 
+        z-index: 5; 
         }
 
 
