--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a href="#">My Achievements</a>
                     </li>
                     <li id="comp" class="competence">
-                        <a href="#">Competences</a>
+                        <a href="#skill">Competences</a>
                     </li>
                     <li class="contact">
                         <a href="#media">Contact</a>
