--- a/index.html
+++ b/index.html
@@ -100,23 +100,28 @@
 
     <div class="menuSlideDropDown">
          <div >
-            <a>
+            <a href="Multi-step-form/Multi-step-form.html" target="_blank">
                 <img class="BtnFormMultiStep" src="MultistepForm.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="HomePage/HomePage.html" target="_blank">
                 <img class="BtnFormMultiStep" src="spaceHome.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="Space tourism multi-page website/space_tourism.html" target="_blank">
                 <img class="BtnFormMultiStep" src="spaceweb.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="countriesDescription/countries.html" target="_blank">
                 <img class="BtnFormMultiStep" src="whereInTheWorld.JPG" alt="MultiStep Form" width="195" height="135">
+            </a>
+          </div>
+            <div>
+            <a href="https://www.figma.com/file/c0mN9fLZdUBRCFaEfl3YLu/siteweb-responsive-salon-de-coiffure?type=design&node-id=0%3A1&mode=design&t=jmIQ0xYYWRq5thjs-1"  target="_blank">
+                <img class="BtnFormMultiStep" src="cutDesign.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
     </div>
