--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
                     <div>
                         Hallo, <br> During 4 years of teaching computer science in high school, 
                         I discovered a great passion for frontend web development. Today,
-                        I am looking for a job as a frontend web developer 
-                        that will allow me to work while enjoying my passion.
-                        I have good analytical skills, 
-                        I am flexible and I like to work in a team. 
-                        I have skills in HTML, CSS, Bootstrap, Figma,
-                        Responsive design, JavaScript and ReactJS.
+                        I'm a front-end web developer and chatbot integration specialist. 
+                        With expertise in creating seamless user experiences 
+                        and a passion for building conversational AI, I bring websites and chatbots to life.
+                        I'm proficient in web languages such as HTML, CSS, JavaScript and chatbot platforms such as Dialogflow, Chatfuel and ManyChat..
+                        From responsive web design to AI-powered chatbots, 
+                        I offer custom solutions tailored to your needs.
                     </div>
                     
                     <Div class="socialMedia">
