--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             chat-icon = "logo-reddit.svg">
         </df-messenger>
     <header>
-        <nav id="header-nav" class="navbar navbar-default">
+        <nav data-aos="fade-down" data-aos-duration="400" id="header-nav" class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
                         <h3 ><a class="name" href="index.html">Steve Edgar Feze Feugang</a> </h3>
