--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
 
     <div class="menuSlideDropDown">
          <div >
-            <a>
+            <a href="Multi-step-form/Multi-step-form.html" target="_blank">
                 <img class="BtnFormMultiStep" src="MultistepForm.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="HomePage/HomePage.html" target="_blank">
                 <img class="BtnFormMultiStep" src="spaceHome.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="Space tourism multi-page website/space_tourism.html" target="_blank">
                 <img class="BtnFormMultiStep" src="spaceweb.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
           <div>
-            <a>
+            <a href="countriesDescription/countries.html" target="_blank">
                 <img class="BtnFormMultiStep" src="whereInTheWorld.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
@@ -207,7 +207,7 @@
                                     <div class="imageSlide">
                                         <h2>NEWS HOMEPAGE</h2>
                                         <a href="HomePage/HomePage.html" target="_blank">
-                                            <img class = "spaceHome" src=spaceHome.JPG" alt="home page" style="width:100%; height:350px"/>  
+                                            <img class = "spaceHome" src="spaceHome.JPG" alt="home page" style="width:100%; height:350px"/>  
                                         </a>
                                     </div>
 
@@ -257,8 +257,7 @@
                                     <div class="imageSlide">
                                         <h2>Countries rest API</h2>
                                         <a href="countriesDescription/countries.html" target="_blank"> 
-                                            <img class = "whereInTheWorld" src="at 19-30-44 Rest countries API using html css and Javascript.png
-" alt="Where in the world" style="width:100%"/>
+                                            <img class = "whereInTheWorld" src="whereInTheWorld.JPG" alt="Where in the world" style="width:100%"/>
                                         </a>
                                     </div>
                                     
