--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <title>MY portfolio</title>
 
     <style>
-       df-messenger {
-        --df-messenger-bot-message: #878fac;
-        --df-messenger-button-titlebar-color: #df9b56;
+        df-messenger {
+        --df-messenger-bot-message: #AED2EF;
+        --df-messenger-button-titlebar-color: #AED2EF;
         --df-messenger-chat-background-color: #fafafa;
-        --df-messenger-font-color: white;
-        --df-messenger-send-icon: #878fac;
-        --df-messenger-user-message: #479b3d;
+        --df-messenger-font-color: rgb(18, 17, 17);
+        --df-messenger-send-icon: #AED2EF;
+        --df-messenger-user-message: #875ac6;
         position: fixed;
         bottom: 20px; 
         z-index: 5;
