--- a/index.html
+++ b/index.html
@@ -168,6 +168,25 @@
                     </Div>
             </div>
         </div>
+
+        <div class="imageFond1" data-aos="zoom-in" data-aos-easing="ease-in-out"
+        data-aos-delay="300" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="456" height="308" viewBox="0 0 456 308" fill="none">
+                <path d="M431.065 159.032C468.048 334.061 325.171 195.958 252.923 211.224C180.674 226.49 219.207 404.987 74.9502 234.277C-138.984 -18.8895 168.518 168.954 240.766 153.688C313.015 138.423 526.517 -185.699 431.065 159.032Z" fill="#AED2FF" fill-opacity="0.15"/>
+              </svg>
+        </div>
+        <div class="imageFond2" class="imageFond1" data-aos="zoom-in" data-aos-easing="ease-in-out"
+        data-aos-delay="300" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="302" height="284" viewBox="0 0 502 484" fill="none">
+                <path d="M501.166 143C501.166 221.424 512.59 480.5 434.165 480.5C337.165 519 4.16535 181.924 4.16535 103.5C-36.8348 -5.5 280.742 1.00001 359.166 1.00001C437.591 1.00001 501.166 64.5756 501.166 143Z" fill="#AED2FF" fill-opacity="0.15"/>
+              </svg>
+        </div>
+        <div class="imageFond3" class="imageFond1" data-aos="zoom-in" data-aos-easing="ease-in-out"
+        data-aos-delay="300" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="700" height="340" viewBox="0 0 1007 340" fill="none">
+                <path d="M903.054 87.9346L1006.05 0.93457L986.192 231.935L0.192383 278.5L694.054 339.435L903.054 87.9346Z" fill="#AED2FF" fill-opacity="0.15"/>
+              </svg>
+        </div>
             
             
         <div class="FrontEndWebChallenge">
