--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <button class="btnLinkedin" ><i id="git_contact" class="fa-brands fa-github "></i><i> </i> Github</button>
                         </a>
                         
-                        <a class="btnLink" href="https://github.com/Rute23" target="_blank">
+                        <a class="btnLink" href="mailto:rutehondiang@gmail.com" target="_blank">
                             <button class="btnLinkedin" x><i class="fa-regular fa-envelope"></i><i> </i> Email</button> 
                         </a>
                         
