--- a/index.html
+++ b/index.html
@@ -566,11 +566,12 @@
                     <section id="phone" class="col-sm-4">
                         <i class="fa-sharp fa-solid fa-phone"></i>
                         <span>Phone</span><br>                     
-                        +49 176 23574264
+                        +1 (418)868-4233
                         <hr class="visible-xs">
                         <span>Address</span><br>
-                        65321 Heidenrod <br>
-                        Laufenselden 26
+                        Rue 94 La Fontaine <br>
+                        Rivière-du-Loup
+                        Québec, GR5 3A1
                         <hr class="visible-xs">
                     </section>
                     <section id="adress" class="col-sm-4">
