--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
     <div class="menuSlideDropDown">
        
-         <div href="https://github.com/Rute23/feze.portfolio.com/blob/main/Multi-step-form/Multi-step-form.html" target="_blank">
-            <a>
+         <div>
+            <a href="https://github.com/Rute23/feze.portfolio.com/blob/main/Multi-step-form/Multi-step-form.html" target="_blank">
                 <img class="BtnFormMultiStep" src="MultistepForm.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
