--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="menuSlideDropDown">
        
          <div>
-            <a href="https://github.com/Rute23/feze.portfolio.com/blob/main/Multi-step-form/Multi-step-form.html" target="_blank">
+            <a href="Multi-step-form/Multi-step-form.html" target="_blank">
                 <img class="BtnFormMultiStep" src="MultistepForm.JPG" alt="MultiStep Form" width="195" height="135">
             </a>
           </div>
