--- a/index.html
+++ b/index.html
@@ -143,15 +143,13 @@
             <div  id="brevepresentation">
                 
                     <div>
-                        Hallo, <br> My name is Steve Edgar, and I'm passionate about web and AI technologies.
-                         After obtaining my Master's degree in Linguistics and my Secondary and High School Education Teacher's Diplom  
-                         in computer science, second level, I taught computer science in High School for 4 years. During this period 
-                          I developed a great passion for Frontend Web Development. Today, I live my passion by creating 
-                         web environments that offer a user-friendly and intuitive experience,
-                          as well as developing and integrating Chatbots. I'm proficient in HTML,
-                           CSS, JavaScript, React Js, Bootstrap and Chatbot development platforms 
-                           such as Dialogflow, Chatfuel and ManyChat. From responsive web design to AI-powered chatbots, 
-                        I offer customized solutions tailored to your needs.
+                        Hallo, <br> My name is Steve Edgar, Passionate about web technologies, 
+                        I've been able to build my niche through methodical, disciplined and creative work.
+                        This work has given me solid programming and web integration skills in HTML, CSS, JavaScript, JS DOM, Jquery, React.JS, Node.JS, Express.JS and MongoDB. 
+                        In order to control, share and track changes to my work and collaborate with other developers, I've invested in mastering the use of Git and GitHub.
+                        I'm currently honing my programming skills by working on the development 
+                        of a car-sharing web application and 
+                        I'm learning to develop the technical and human skills needed to become an Azure DevOps specialist thanks to Microsoft learn.
                     </div>
                     
                     <Div class="socialMedia">
