--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                           as well as developing and integrating Chatbots. I'm proficient in HTML,
                            CSS, JavaScript, React Js, Bootstrap and Chatbot development platforms 
                            such as Dialogflow, Chatfuel and ManyChat. From responsive web design to AI-powered chatbots, 
-                        I offer customized solutions tailored to your needs.
+                        I offer customized solutions tailored to your need.
                     </div>
                     
                     <Div class="socialMedia">
